[package]
name = "saferlmdb"
edition = "2021"
version = "0.1.0"
authors = ["FullContact, Inc", "Jason Lingle", "sean watters <sean@ordinarylabs.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ordinarylabs/saferlmdb"
keywords = ["lmdb", "zero-copy", "btree"]
categories = ["database"]

description = """
An almost-safe, near-zero-cost, feature-complete, unabashedly non-abstract
wrapper around LMDB.
"""

[dependencies]
bitflags = "2"
libc = "0.2"
liblmdb = "0.9.70"
supercow = "0.1.0"

[dev-dependencies]
tempdir = "0.3"
